fixed ios flex-wrap, font adjustments for ipad screen

--- a/scss/_components.buttons.scss
+++ b/scss/_components.buttons.scss
@@ -60,7 +60,7 @@ button,
 }
 
 .button--matrix-toggle {
-  width: 75px;
+  width: 100px;
   flex: none;
   color: $button-text-dark;
 
@@ -80,7 +80,7 @@ button,
    right: 0px;
    position: absolute;
    text-align: center;
-   width: 75px;
+   width: 100px;
 
 
    &:hover {
