--- a/scss/_components.mgmt-table.scss
+++ b/scss/_components.mgmt-table.scss
@@ -2,7 +2,8 @@
   position: absolute;
   top: 50px;
   left: 0;
-  overflow: auto;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   height: 718px;
 
   &.table__wrapper--student {
