--- a/scss/_components.stimuli.scss
+++ b/scss/_components.stimuli.scss
@@ -7,7 +7,8 @@
 }
 
 .stimuli-tiles {
-  overflow: auto;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
   width: 100%;
 }
 
