--- a/scss/_objects.icon-text.scss
+++ b/scss/_objects.icon-text.scss
@@ -17,7 +17,7 @@
 }
 
 .icon-text--vertical {
-  width: 75px;
+  width: 100px;
   text-align: center;
   color: $menu-button;
 
