--- a/scss/_settings.grid.scss
+++ b/scss/_settings.grid.scss
@@ -58,7 +58,7 @@
 
 .grid--wrap > .grid-cell,
 .grid--wrap > .g-cell {
-  flex: 0;
+  flex: 0 auto;
   display: block;
 }
 
